# lython

./: .clangd  .flake8  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  bench.py  build.sh  build_mlir.sh  fib.js  fib.ll  fib.py  fib.py.ll  fib.py.s  flake.nix  helloworld.ll  main  main.py  main_output.mlir  memo.md  pyproject.toml  python_mlir_opt.cpp  sample.c  sample.ll  simple_test.mlir  source.py  source.py.ast.py  source.py.ll  source.py.s  test_basic_types.mlir  test_python_dialect.mlir  test_python_types.mlir  vendor_mlir.sh  visit_source.py
fuzz/: CMakeLists.txt  FuzzerSupport.cpp  FuzzerSupport.h  fuzz_emitter.cpp  fuzz_parser.cpp  fuzz_pipeline.cpp
fuzz/corpora/fuzz_emitter/: async_await.py  exceptions_flow.py  protocol_class.py  while_mutation.py
fuzz/corpora/fuzz_parser/: klass.py  optional.py  tryexc.py
fuzz/corpora/fuzz_pipeline/: comp.py  diag_joinedstr.py  diag_nonlocal.py  diag_ownership.py  func.py  generics_containers.py  genexpr_iter.py  inheritance_override.py  regress_class_field_boxed.py  set_list_box_methods.py  str_methods.py  tuple_multi_return.py  union_narrowing.py
fuzz/dictionaries/: python.dict
src/lython/dialects/binding/: CMakeLists.txt  PyDialectPythonBindings.cpp
src/lython/driver/: CMakeLists.txt
src/lython/driver/include/: Driver.h  DriverCodeGen.h  SanitizerSupport.h
src/lython/driver/lib/: Compile.cpp  Frontend.cpp  LLVMFinalize.cpp  Registry.cpp  SafetyMetadata.cpp  TargetConfig.cpp
src/lython/emitter/: CMakeLists.txt  README.md
src/lython/emitter/include/: Emitter.h
src/lython/emitter/lib/: AstAccess.h  Builder.cpp  Builder.h  BuilderAst.cpp  BuilderAsync.cpp  BuilderBoolOps.cpp  BuilderCalls.cpp  BuilderClasses.cpp  BuilderContainers.cpp  BuilderControl.cpp  BuilderEH.cpp  BuilderExpressions.cpp  BuilderFunctions.cpp  BuilderImpl.h  BuilderImports.cpp  BuilderLiterals.cpp  BuilderMatch.cpp  BuilderStatements.cpp  BuilderSupport.cpp  BuilderTensors.cpp  BuilderTypes.cpp  ClosureAnalysis.cpp  ClosureAnalysis.h  Emitter.cpp  EmitterCalls.cpp  EmitterClasses.cpp  EmitterControlFlow.cpp  EmitterCore.cpp  EmitterCore.h  EmitterExceptions.cpp  EmitterExpressions.cpp  EmitterFunctions.cpp  EmitterImports.cpp  EmitterLoops.cpp  EmitterMatch.cpp  EmitterOps.h  EmitterPrimitive.cpp  EmitterPyOps.h  EmitterState.h  EmitterStatements.cpp  (+12 more)
src/lython/lowering/: CMakeLists.txt  LinalgLoweringPass.cpp  NativeVerificationPass.cpp  PyCallLowering.cpp  PyDictLowering.cpp  PyFuncLowering.cpp  PyOptimizationPass.cpp  PyRefCountLowering.cpp  PyTupleLowering.cpp  PyValueLowering.cpp  RefCountInsertionPass.cpp  RuntimeLoweringPass.cpp  RuntimeSupport.cpp  RuntimeSupport.h
src/lython/lowering/Common/: AsyncSafetyKernel.h  ClassLayout.cpp  ClassLayout.h  Container.h  HostSupportBuilder.cpp  Instrumentation.cpp  Instrumentation.h  LoweringPipeline.h  LoweringUtils.h  Object.h  PythonSourceRange.h  RuntimeLibrary.cpp  (+12 more)
src/lython/parser/: CMakeLists.txt  CPYTHON_PATCHES.md  PegenShim.c  README.md  pegen.h
src/lython/runtime/: CMakeLists.txt  abi.h  bltinmodule.cpp  embedded.h  lyrt.cpp  lyrt.h  lyrt_abi.cpp  lyrt_abi.h  stackguard.cpp  traceback.cpp  traceback.h  typing.mlir
tests/: CMakeLists.txt  run_tests.py
tests/frontend/: test_ast_nodes.py
tests/golden/: run_case.py
tests/golden/cases/: augassign_ops.py  augassign_ops.stdout  boolop_value.py  boolop_value.stdout  builtins_numeric.py  builtins_numeric.stdout  bytes_methods.py  bytes_methods.stdout  bytes_type.py  bytes_type.stdout  class_attributes.py  class_attributes.stdout  class_dataclass.py  class_dataclass.stdout  class_mro.py  class_mro.stdout  class_property.py  class_property.stdout  class_protocol.stdout  class_super.py  class_super.stdout  class_user_exceptions.py  class_user_exceptions.stdout  comp_tuple_target.py  comp_tuple_target.stdout  complex_type.py  complex_type.stdout  comprehension.stdout  cond_reassign.stdout  cross_dataclass_fstring.py  cross_dataclass_fstring.stdout  cross_fstring_slice.py  cross_fstring_slice.stdout  cross_generator_handler_suspend.py  cross_generator_handler_suspend.stdout  cross_numeric_mix.py  cross_numeric_mix.stdout  cross_user_exception_display.py  cross_user_exception_display.stdout  default_arguments.py  (+214 more)
tests/golden/errors/: bytes_decode_unknown_encoding.py  bytes_decode_unknown_encoding.stderr-re  bytes_fromhex_invalid.py  bytes_fromhex_invalid.stderr-re  class_attr_instance_shadow_write.py  class_attr_instance_shadow_write.stderr-re  class_mro_conflict.py  class_mro_conflict.stderr-re  complex_mixed_runtime.py  complex_mixed_runtime.stderr-re  complex_zero_division.py  complex_zero_division.stderr-re  cross_bigint_traceback.py  cross_bigint_traceback.stderr-re  cross_bigint_traceback.stdout  cross_generator_stale_context.py  cross_generator_stale_context.stderr-re  cross_generator_stale_context.stdout  cross_generator_throw_in_handler.py  cross_generator_throw_in_handler.stderr-re  cross_generator_throw_unwind.py  cross_generator_throw_unwind.stderr-re  cross_generator_throw_unwind.stdout  cross_nested_try_handler_chain.py  cross_nested_try_handler_chain.stderr-re  cross_nested_try_handler_chain.stdout  cross_userkey_keyerror.py  cross_userkey_keyerror.stderr-re  cross_userkey_keyerror.stdout  del_attribute.py  del_attribute.stderr-re  del_variable.stderr-re  dict_changed_size.py  dict_changed_size.stderr-re  dict_missing_key.py  dict_missing_key.stderr-re  file_not_found.py  file_not_found.stderr-re  float_truthiness.py  float_truthiness.stderr-re  (+112 more)
tests/integration/: test_typed_ast_integration.py
tests/native/: test_native_api.py
tests/typing/: test_types.py
tests/unit/: DriverTests.cpp  EmitterTests.cpp  EvidenceVerifierTests.cpp  ParserTests.cpp  TypeInferenceTests.cpp  TypeSystemTests.cpp  UnicodeTablesData.inc  UnicodeTablesTests.cpp
tools/: CLI.cpp  CMakeLists.txt  SanitizerSupport.cpp  frontend_migration_audit.py  gen_unicode_tables.py  parser_ast_parity_smoke.py  parser_cpython314_smoke.py  parser_source_encoding_smoke.py
tools/dialects/: GenerateProtocolRelations.py
(+642 files in other folders)
