[project]
name = "lython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.3.0",
    "isort>=5.13.2",
    "lython",
    "mypy>=1.16.1",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.mypy]
files = "src/lython"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]
ignore = ["third_party/"]
typeCheckingMode = "strict"

[tool.uv.sources]
lython = { workspace = true }
