[project]
name = "lython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.3.0",
    "isort>=5.13.2",
    "lython",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src/lython"]
exclude = ["**/__pycache__", "**/*.pyi"]
ignore = ["third_party/", "src/lython/mlir/"]
typeCheckingMode = "basic"

[tool.black]
extend-exclude = """
^/third_party/*
|^/src/lython/mlir/*
"""

[tool.isort]
profile = "black"
line_length = 88
extend_skip_glob = ["third_party/*", "src/lython/mlir/*"]

[tool.uv.sources]
lython = { workspace = true }
